--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.step filter=lfs diff=lfs merge=lfs -text
 *.STEP filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
